link to project changelog instead of local copy

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h3>Install from Source</h3>
         <p>Please read <a href="https://github.com/OpenMathLib/OpenBLAS/wiki/User-Manual">User Manual</a> and <a href="https://github.com/OpenMathLib/OpenBLAS/wiki/Installation-Guide">Installation Guide</a></p>
         <h3>Changelog</h3>
-        <p>The current release is 0.3.26 version created Jan 2, 2024. Please refer to the <a href="Changelog.txt">changelog file</a> for notable changes. 
+        <p>The current release is 0.3.26 version created Jan 2, 2024. Please refer to the <a href="https://github.com/OpenMathLib/OpenBLAS/Changelog.txt">changelog file</a> for notable changes. 
 	<!-- Here is the <a href="dgemm_snb_1thread.png">single thread DGEMM</a> performance result on desktop Sandy Bridge.</p> -->
         <h3>License</h3>
         <p>BSD</p>
