link to the mkdocs-generated docs tree

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 	Binaries for other platforms are usually available on the sites listed in <a href="https://github.com/OpenMathLib/OpenBLAS/wiki/Precompiled-installation-packages">the OpenBLAS Wiki</a> 
         <h3>Install from Source</h3>
         <p>Please read <a href="https://github.com/OpenMathLib/OpenBLAS/wiki/User-Manual">User Manual</a> and <a href="https://github.com/OpenMathLib/OpenBLAS/wiki/Installation-Guide">Installation Guide</a></p>
+	<p>Full project documentation (that also covers topics like installing from source) is available <a href="docs/"> here</a> - this builds on and will eventually replace the wiki</p>      
         <h3>Changelog</h3>
         <p>The current release is 0.3.27 version created Apr 4, 2024. Please refer to the <a href="https://github.com/OpenMathLib/OpenBLAS/blob/develop/Changelog.txt">changelog file</a> for notable changes. 
 	<!-- Here is the <a href="dgemm_snb_1thread.png">single thread DGEMM</a> performance result on desktop Sandy Bridge.</p> -->
